# kimi

./: .cursorrules  .gitignore  CONFIG.md  Cargo.toml  DATABASE.md  DATE_PARSING.md  PIPELINE.md  PRIVACY-SUMMARY.md  README.md  SETUP-VERIFICATION.md  casca-profile.md  config.local.toml.example  config.toml  how-identity-works.md  install.md  my-to-do.md
data/: history.db  history.db-shm  history.db-wal  identity-state.json  persona-state.json
data/personalities/: Casca.md  Kimi.md  Memories.md  My personality.md  My personality.template.md  kimi-old.md  sassy.md
src/: config.rs  main.rs  storage.rs
src/agents/: brave.rs  gab-ai.rs  mod.rs  ollama.rs  openai-compat.rs  venice.rs
src/app/: chat.rs  command.rs  commands.rs  connect.rs  help.rs  history.rs  identity.rs  menu.rs  mod.rs  models.rs  navigation.rs  personality.rs  scroll.rs  text-input.rs  text_input.rs  types.rs
src/app/chat/: agent.rs  commands.rs  input.rs  mod.rs  response.rs  summary.rs
src/app/chat/agent/: context.rs  intent.rs  json.rs  obsidian.rs  search.rs  tools.rs  verification.rs
src/services/: clipboard.rs  convert.rs  dates.rs  embeddings.rs  fuzzy.rs  gab_ai.rs  identity.rs  link-download.rs  link_download.rs  memories.rs  mod.rs  obsidian.rs  personality.rs  projects.rs  retrieval.rs  tts.rs  venice.rs  weather.rs
src/ui/: chat.rs  components.rs  connect.rs  help.rs  history.rs  identity.rs  menu.rs  mod.rs  models.rs  personality.rs  projects.rs  utils.rs
tools/debug-db/: Cargo.toml
tools/debug-db/src/: main.rs
