[package]
name = "kimi"
version = "0.7.1"
edition = "2024"

[dependencies]
# Terminal UI
crossterm = "0.28"
color-eyre = "0.6"
ratatui = "0.29"

# HTTP client for APIs
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

# Audio playback
rodio = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Config file handling
directories = "5.0"
chrono = "0.4.43"

# Database and utilities
surrealdb = { version = "2", features = ["kv-rocksdb"] }
arboard = "3.6.1"
unicode-width = "0.2.0"
base64 = "0.22"
image = "0.25"
